--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
     "compile": "npmx hardhat compile",
     "deploy-test": "hardhat deploy --network rinkeby"
   },
-    "devDependencies": {
+  "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@openzeppelin/contracts": "^4.5.0",
+     "@openzeppelin/contracts": "^3.4.0",
+   "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
+    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.10.5",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.7",
-      "solidity-coverage": "^0.7.19",
-    "ethereum-waffle": "^3.4.0",
+    "solidity-coverage": "^0.7.19"
   },
   "dependencies": {
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
-  }}
+  }
+}
