--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
-     "@openzeppelin/contracts": "^3.4.0",
-   "@openzeppelin/contracts-upgradeable": "^3.4.1",
+    "@openzeppelin/contracts": "^3.4.0",
+    "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
@@ -24,8 +24,10 @@
     "solidity-coverage": "^0.7.19"
   },
   "dependencies": {
+    "@openzeppelin/hardhat-upgrades": "^1.16.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "axios": "^0.26.1",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
